--- a/css/main.css
+++ b/css/main.css
@@ -7,37 +7,14 @@ body{
     margin-bottom: 5rem;
 }
 
-nav ul {
-    list-style: none;
-    padding-left: 0.5rem;
-}
-nav {
-    margin-top: 2rem;
-}
-.nav-about {
-    padding-top: 1.5rem;
-}
-.about {
-    padding-left: 0.5rem;
-    padding-top: 1.5rem;
-    line-height: 2rem;
-    max-width: 45rem;
-}
-nav ul li a{
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-    padding-bottom: 0.5rem;
-    border-bottom: 2px solid black;
-
-}
-nav ul li a:hover{
-    opacity: 0.5;
-}
 .subtitle {
     padding-left: 0.5rem;
-    padding-top: 2rem;
     font-style: italic;
+}
+header h4 {
+    padding-top: 0.8rem;
+    padding-left: 0.5rem;
+    font-weight: 400;
 }
 .product-cta {
     text-decoration: none;
